--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cloud_firestore: ^4.4.3
   firebase_auth: ^4.2.9
   flutter_animarker: ^3.2.0
+  path_provider: ^2.0.13
 
 dev_dependencies:
   flutter_test:
