--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
   flutter_bloc: ^8.1.2
   equatable: ^2.0.5
   shared_preferences: ^2.0.15
-  connectivity_plus: ^2.3.0
+  connectivity_plus: ^3.0.3
   bloc: ^8.1.1
   flutter_screenutil: ^5.6.0
   formz: ^0.4.1
@@ -42,6 +42,7 @@ dependencies:
   firebase_auth: ^4.2.9
   flutter_animarker: ^3.2.0
   path_provider: ^2.0.13
+  api_cache_manager: ^1.0.2
 
 dev_dependencies:
   flutter_test:
