--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,17 +6,19 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.17.1 <3.0.0"
+  sdk: ">=2.19.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
+  papa_burger_server:
+    git: https://github.com/Gambley1/papa-burger-server.git
+
   cupertino_icons: ^1.0.2
   page_transition: ^2.0.9
   google_fonts: ^3.0.1
   shimmer: ^2.0.0
-  flutter_screenutil: ^5.6.0
   formz: ^0.4.1
   font_awesome_flutter: ^10.3.0
   flutter_credit_card: ^3.0.6
@@ -24,7 +26,7 @@ dependencies:
   # google_nav_bar: ^5.0.6
   
   connectivity_plus: ^3.0.3
-  dio: ^4.0.6
+  dio: ^5.1.1
   
   rxdart: ^0.27.7
   equatable: ^2.0.5
@@ -46,6 +48,8 @@ dependencies:
   cloud_firestore: ^4.4.3
   fast_immutable_collections: ^8.2.0
   logger: ^1.1.0
+  flutter_svg: ^2.0.5
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
