--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ migrate_working_dir/
 .pub-cache/
 .pub/
 /build/
-firebase_options.dart
+**/lib/src/firebase_options.dart
 
 # Web related
 lib/generated_plugin_registrant.dart
