--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ migrate_working_dir/
 .pub-cache/
 .pub/
 /build/
-**/lib/src/firebase_options.dart
+lib/firebase_options.dart
 
 # Web related
 lib/generated_plugin_registrant.dart
