Add google api key to .env secrets

--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,18 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+lib/firebase_options.dart
+android/app/build.gradle
+android/app/google-services.json
+android/app/src/main/res/values-night/styles.xml
+android/app/src/main/res/values/styles.xml
+android/app/src/main/res/mipmap-xxxhdpi/ic_launcher.png
+android/app/src/main/res/mipmap-xxhdpi/ic_launcher.png
+android/app/src/main/res/mipmap-xhdpi/ic_launcher.png
+android/app/src/main/res/mipmap-mdpi/ic_launcher.png
+android/app/src/main/res/mipmap-hdpi/ic_launcher.png
+android/app/src/main/res/drawable-v21/launch_background.xml
+android/app/src/main/res/drawable/launch_background.xml
+android/app/src/main/kotlin/com/example/papa_burger/MainActivity.kt
+android/app/src/main/AndroidManifest.xml
+.env
