--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   device_preview: ^1.1.0
   device_preview_screenshot: ^1.0.0
   appwrite: ^9.0.0
+  flutter_dotenv: ^5.0.2
 
 dev_dependencies:
   flutter_test:
