--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,20 +1,17 @@
 name: papa_burger
 description: A new Flutter project.
-
+version: 1.0.0+1
 publish_to: 'none' 
 
-version: 1.0.0+1
-
 environment:
-  sdk: ">=2.19.0 <3.0.0"
-  # sdk: ">=3.0.0 <3.1.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
   papa_burger_server:
-    git: https://github.com/Gambley1/papa-burger-server
+    git: https://github.com/Gambley1/papa-burger-server.git
 
   cupertino_icons: ^1.0.5
   page_transition: ^2.0.9
@@ -24,7 +21,6 @@ dependencies:
   font_awesome_flutter: ^10.4.0
   flutter_credit_card: ^3.0.6
   flutter_spinkit: ^5.2.0
-  # google_nav_bar: ^5.0.6
   
   connectivity_plus: ^4.0.0
   dio: ^5.1.2
@@ -34,7 +30,6 @@ dependencies:
   bloc: ^8.1.2
   flutter_bloc: ^8.1.3
 
-  geolocator: ^9.0.2
   google_maps_flutter: ^2.2.6
 
   hive: ^2.2.3
@@ -43,19 +38,26 @@ dependencies:
   flutter_cache_manager: ^3.3.0
   cached_network_image: ^3.2.3
   
-  google_sign_in: ^6.1.0
-  firebase_core: ^2.12.0
-  firebase_auth: ^4.6.0
-  cloud_firestore: ^4.7.0
+  # google_sign_in: ^6.1.0
+  # firebase_core: ^2.12.0
+  # firebase_auth: ^4.6.0
+  # cloud_firestore: ^4.7.0
   fast_immutable_collections: ^9.1.1
   logger: ^1.3.0
   flutter_svg: ^2.0.5
-  provider: ^6.0.5
-  stream_loader: ^1.5.0
+  # provider: ^6.0.5
+  # stream_loader: ^1.5.0
   device_preview: ^1.1.0
   device_preview_screenshot: ^1.0.0
-  appwrite: ^9.0.0
+  # appwrite: ^9.0.0
   flutter_dotenv: ^5.0.2
+  # flutter_stripe: ^9.2.0
+  http: ^0.13.6
+  intl: ^0.18.0
+  faker: ^2.1.0
+  badges: ^3.1.1
+  geolocator: ^9.0.2
+  geocoding: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -73,3 +75,4 @@ flutter:
   assets:
     - assets/icons/
     - assets/images/
+    - .env
