--- a/packages/app_ui/pubspec.yaml
+++ b/packages/app_ui/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flex_color_scheme: ^7.3.1
   flutter:
     sdk: flutter
+  pausable_timer: ^3.1.0+3
 
 dev_dependencies:
   flutter_test:
