chore: test fix Dockerfile in api

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -3,10 +3,10 @@
 # Specify the Dart SDK base image version using dart:<version> (ex: dart:2.17)
 FROM dart:stable AS build
 
-WORKDIR /app
+WORKDIR /api/app
 
 # Resolve app dependencies.
-COPY pubspec.* ./api
+COPY pubspec.* ./
 RUN dart pub get
 
 # Copy app source code and AOT compile it.
