--- a/api/pubspec.yaml
+++ b/api/pubspec.yaml
@@ -14,8 +14,7 @@ dependencies:
   dart_jsonwebtoken: ^2.14.0
   dio: ^5.4.3
   dotenv: ^4.2.0
-  env:
-    path: packages/env
+  envied: ^0.5.4+1
   equatable: ^2.0.5
   intl: ^0.19.0
   json_annotation: ^4.9.0
@@ -26,6 +25,7 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.4.11
+  envied_generator: ^0.5.4+1
   json_serializable: ^6.8.0
   mocktail: ^1.0.3
   test: ^1.25.5
