--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   collection: ^1.18.0
   connectivity_plus: ^6.0.3
   cupertino_icons: ^1.0.6
+  env:
+    path: packages/env
   equatable: ^2.0.5
   fast_immutable_collections: ^10.2.4
   firebase_authentication_client:
