chore: fix overload database connection instances issue

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,9 +8,6 @@ package="com.example.yandex_food_delivery_clone">
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
 
-    <meta-data android:name="com.google.android.geo.API_KEY"
-               android:value="AIzaSyCThbQUZlTxyDRpiPQKPaFeFflAK0TfPkw"/>
-
     <!-- Provide required visibility configuration for API level 30 and above -->
     <queries>
     <!-- If your app checks for SMS support -->
@@ -33,8 +30,10 @@ package="com.example.yandex_food_delivery_clone">
         android:label="yandex_food_delivery_clone"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher"
-        android:enableOnBackInvokedCallback="true"
         android:requestLegacyExternalStorage="true">
+
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyCThbQUZlTxyDRpiPQKPaFeFflAK0TfPkw"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -43,7 +42,8 @@ package="com.example.yandex_food_delivery_clone">
             android:theme="@style/LaunchTheme"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
             android:hardwareAccelerated="true"
-            android:windowSoftInputMode="adjustResize">
+            android:windowSoftInputMode="adjustResize"
+            android:enableOnBackInvokedCallback="true">
             <!-- Specifies an Android theme to apply to this Activity as soon as
                  the Android process has started. This theme is visible to the user
                  while the Flutter UI initializes. After that, this theme continues
@@ -52,6 +52,7 @@ package="com.example.yandex_food_delivery_clone">
               android:name="io.flutter.embedding.android.NormalTheme"
               android:resource="@style/NormalTheme"
               />
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
