chore: conveniently add restaurants and menus from json

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -63,6 +63,10 @@ android {
             signingConfig = signingConfigs.debug
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt')
+            manifestPlaceholders = [appName: "Yandex Eats"]
+        }
+        debug {
+            manifestPlaceholders = [appName: "Yandex Eats DEBUG"]
         }
     }
 }
