--- a/packages/location_repository/pubspec.yaml
+++ b/packages/location_repository/pubspec.yaml
@@ -7,6 +7,8 @@ environment:
   sdk: ^3.4.0
 
 dev_dependencies:
+  build_runner: ^2.4.11
+  json_serializable: ^6.8.0
   mocktail: ^1.0.3
   test: ^1.25.2
   very_good_analysis: ^6.0.0
@@ -15,6 +17,10 @@ dependencies:
   dio: ^5.5.0+1
   env:
     path: ../env
+  equatable: ^2.0.5
   geolocator: ^12.0.0
+  json_annotation: ^4.9.0
   shared:
     path: ../shared
+  yandex_food_api:
+    path: ../../api
