--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,7 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.4.11
+  build_verify: ^3.1.0
   flutter_launcher_icons: ^0.13.1
   flutter_test:
     sdk: flutter
